# LSM

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: coverage.yml  ubuntu.yml  windows.yml
cmake/: lsmConfig.cmake.in
examples/: CMakeLists.txt  completion.cpp  completion_splitter.cpp  coroutine_cancellation.cpp  coroutine_publisher.cpp  coroutine_retry.cpp  coroutine_timeout.cpp  deferral.cpp  deferral_gate.cpp  door.cpp  handlers_publisher.cpp  handlers_return_output.cpp  processing_queue.cpp  publisher_queue.cpp  traffic_light_priorities.cpp  turnstile.cpp  unhandled_hooks.cpp
include/: lsm.hpp
include/lsm/: core.hpp  cosm.hpp
include/lsm/detail/: concepts.hpp  effect.hpp  handlers.hpp  helpers.hpp  machine_impl.hpp  policy.hpp  types.hpp
scripts/: build_matrix.py
tests/: CMakeLists.txt  any_priority.cpp  completion.cpp  completion_order.cpp  coroutine_semantics.cpp  cosm_adapter_pipeline.cpp  cosm_branch_coverage.cpp  cosm_cobuilder.cpp  cosm_task_edges.cpp  deferral.cpp  effect_publisher_default.cpp  effect_return_output.cpp  enter_exit.cpp  guard_combined.cpp  guard_concepts.cpp  handlers_bindings.cpp  handlers_concepts.cpp  handlers_exit.cpp  header_include_all.cpp  header_include_core.cpp  header_include_cosm.cpp  machine_deferral_replay.cpp  machine_deferral_unhandled.cpp  machine_dispatch_queue.cpp  machine_on_state_bindings.cpp  perf_smoke.cpp  policy_move.cpp  publisher_policy.cpp  select_commit.cpp  selection_priority.cpp  unhandled_hooks.cpp  value_completion_sort.cpp
